--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "",
+  "type": "module",
   "dependencies": {
     "air-datepicker": "^2.2.3",
     "cleave.js": "^1.6.0",
@@ -35,6 +36,7 @@
     "file-loader": "^6.2.0",
     "fs": "0.0.1-security",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "node-static": "^0.7.11",
