--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
         "es2021": true
     },
     "root": true,
-    "extends": ["airbnb", "airbnb-typescript", "plugin:node/recommended", "plugin:@typescript-eslint/recommended"],
+    "extends": ["airbnb", "airbnb-typescript", "plugin:@typescript-eslint/recommended"],
     "plugins": ["fsd", "@typescript-eslint"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
